VPC_SharedInfrastructure.yaml
{
    "AWSTemplateFormatVersion": "2010-09-09", 
    "Parameters": {
        "vpccidr": {
            "Type": "String", 
            "MinLength": 9, 
            "MaxLength": 18, 
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})", 
            "ConstraintDescription": "Must be a valid CIDR range in the form x.x.x.x/16", 
            "Default": "10.20.0.0/16"
        }, 
        "psharedacidr": {
            "Type": "String", 
            "MinLength": 9, 
            "MaxLength": 18, 
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})", 
            "ConstraintDescription": "Must be a valid CIDR range in the form x.x.x.x/22", 
            "Default": "10.20.0.0/22"
        }, 
        "psharedbcidr": {
            "Type": "String", 
            "MinLength": 9, 
            "MaxLength": 18, 
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})", 
            "ConstraintDescription": "Must be a valid CIDR range in the form x.x.x.x/22", 
            "Default": "10.20.4.0/22"
        }
    }, 
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC", 
            "Properties": {
                "CidrBlock": {
                    "Ref": "vpccidr"
                }
            }
        }, 
        "IGW": {
            "Type": "AWS::EC2::InternetGateway"
        }, 
        "S3AppBucket": {
            "DeletionPolicy": "Retain", 
            "Type": "AWS::S3::Bucket", 
            "Properties": {
                "AccessControl": "PublicRead", 
                "WebsiteConfiguration": {
                    "ErrorDocument": "index.html", 
                    "IndexDocument": "index.html"
                }
            }
        }, 
        "BucketPolicyApp": {
            "Type": "AWS::S3::BucketPolicy", 
            "Properties": {
                "Bucket": {
                    "Ref": "S3AppBucket"
                }, 
                "PolicyDocument": {
                    "Statement": [
                        {
                            "Sid": "ABC123", 
                            "Action": [
                                "s3:GetObject"
                            ], 
                            "Effect": "Allow", 
                            "Resource": {
                                "Fn::Join": [
                                    "", 
                                    [
                                        "arn:aws:s3:::", 
                                        {
                                            "Ref": "S3AppBucket"
                                        }, 
                                        "/*"
                                    ]
                                ]
                            }, 
                            "Principal": {
                                "AWS": [
                                    "*"
                                ]
                            }
                        }
                    ]
                }
            }
        }, 
        "GatewayAttach": {
            "Type": "AWS::EC2::VPCGatewayAttachment", 
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "IGW"
                }, 
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }, 
        "SubnetPublicSharedA": {
            "Type": "AWS::EC2::Subnet", 
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0, 
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }, 
                "CidrBlock": {
                    "Ref": "psharedacidr"
                }, 
                "MapPublicIpOnLaunch": true, 
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }, 
        "SubnetPublicSharedB": {
            "Type": "AWS::EC2::Subnet", 
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1, 
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                }, 
                "CidrBlock": {
                    "Ref": "psharedbcidr"
                }, 
                "MapPublicIpOnLaunch": true, 
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }, 
        "SubnetRouteTableAssociatePublicA": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation", 
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTablePublic"
                }, 
                "SubnetId": {
                    "Ref": "SubnetPublicSharedA"
                }
            }
        }, 
        "SubnetRouteTableAssociatePublicB": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation", 
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTablePublic"
                }, 
                "SubnetId": {
                    "Ref": "SubnetPublicSharedB"
                }
            }
        }, 
        "RouteDefaultPublic": {
            "Type": "AWS::EC2::Route", 
            "DependsOn": "GatewayAttach", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "GatewayId": {
                    "Ref": "IGW"
                }, 
                "RouteTableId": {
                    "Ref": "RouteTablePublic"
                }
            }
        }, 
        "RouteDefaultPrivateA": {
            "Type": "AWS::EC2::Route", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "NatGatewayId": {
                    "Ref": "NatGatewayA"
                }, 
                "RouteTableId": {
                    "Ref": "RouteTablePrivateA"
                }
            }
        }, 
        "RouteDefaultPrivateB": {
            "Type": "AWS::EC2::Route", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "NatGatewayId": {
                    "Ref": "NatGatewayB"
                }, 
                "RouteTableId": {
                    "Ref": "RouteTablePrivateB"
                }
            }
        }, 
        "RouteTablePublic": {
            "Type": "AWS::EC2::RouteTable", 
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }, 
        "RouteTablePrivateA": {
            "Type": "AWS::EC2::RouteTable", 
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }, 
        "RouteTablePrivateB": {
            "Type": "AWS::EC2::RouteTable", 
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        }, 
        "EIPNatGWA": {
            "DependsOn": "GatewayAttach", 
            "Type": "AWS::EC2::EIP", 
            "Properties": {
                "Domain": "vpc"
            }
        }, 
        "EIPNatGWB": {
            "DependsOn": "GatewayAttach", 
            "Type": "AWS::EC2::EIP", 
            "Properties": {
                "Domain": "vpc"
            }
        }, 
        "NatGatewayA": {
            "Type": "AWS::EC2::NatGateway", 
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": "EIPNatGWA.AllocationId"
                }, 
                "SubnetId": {
                    "Ref": "SubnetPublicSharedA"
                }
            }
        }, 
        "NatGatewayB": {
            "Type": "AWS::EC2::NatGateway", 
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": "EIPNatGWB.AllocationId"
                }, 
                "SubnetId": {
                    "Ref": "SubnetPublicSharedB"
                }
            }
        }
    }, 
    "Outputs": {
        "vpcid": {
            "Description": "ID of Shared Infrastructure VPC", 
            "Value": {
                "Ref": "VPC"
            }
        }, 
        "natgatewayaid": {
            "Description": "ID of NAT Gateway A", 
            "Value": {
                "Ref": "NatGatewayA"
            }
        }, 
        "natgatewaybid": {
            "Description": "ID of NAT Gateway B", 
            "Value": {
                "Ref": "NatGatewayB"
            }
        }, 
        "publicroutetable": {
            "Description": "ID of Public Route Table", 
            "Value": {
                "Ref": "RouteTablePublic"
            }
        }, 
        "privateroutetablea": {
            "Description": "ID of Private Route Table - A", 
            "Value": {
                "Ref": "RouteTablePrivateA"
            }
        }, 
        "privateroutetableb": {
            "Description": "ID of Private Route Table - B", 
            "Value": {
                "Ref": "RouteTablePrivateB"
            }
        }, 
        "appbucketurl": {
            "Description": "Shared Infrastructure App Bucket", 
            "Value": {
                "Fn::GetAtt": "S3AppBucket.WebsiteURL"
            }
        }
    }
}
